<resources>
    <string name="app_name">Agenda Univalle</string>

    <!--MAIN ACTIVITY-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--ACTIVIDAD REGISTRO-->
    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombreEt">Nombres</string>
    <string name="CorreoEt">Correo Electronico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengounacuentaTXT">Tengo una Cuenta</string>


    <!--Actividad Login-->
    <string name="IniciarSesion">Iniciar sesion</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="UsuarioNuevoTXT">¿No tienes una cuenta?. Registrate</string>

    <!--Menu Principal Diseño-->
    <string name="UidPrincipal">--</string>
    <string name="BienvenidoPrincipal">Bienvenido(a)</string>
    <string name="NombresPrincipal">--</string>
    <string name="CorreoPrincipal">--</string>
    <string name="EstadoCuentaPrincipal">No verificado</string>

    <string name="AgregarNotas">Agregar</string>
    <string name="ListarNotas">Mis Notas</string>
    <string name="Archivados">Archivados</string>
    <string name="Perfil">Perfil</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="CerrarSesion">Salir</string>

    <!--Agregar Nota-->
    <string name="Uid_Usuario">Uid del Usuario</string>
    <string name="Correo_Usuario">Correo de Usuario</string>
    <string name="Fecha_hora_actual_TXT">Fecha de Registro</string>
    <string name="Fecha_hora_actual">Fecha y hora actual</string>
    <string name="Titulo">Titulo</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Fecha">00/00/0000</string>
    <string name="Estado">No finalizado</string>

    <!--MENU-->
    <string name="Agregar_Nota_BD">Agregar</string>
    <string name="Actualizar_Nota_BD">Actualizar</string>

    <!--ITEM NOTA-->
    <string name="Id_nota_Item">ID Nota</string>
    <string name="Uid_Usuario_Item">Uid del Usuario</string>
    <string name="Correo_Usuario_Item">Correo de Usuario</string>
    <string name="Fecha_hora_registro_Item">Fecha y hora registro</string>
    <string name="Titulo_Item">Titulo</string>
    <string name="Descripcion_Item">Descripcion</string>
    <string name="Fecha_Item">00/00/0000</string>
    <string name="Estado_Item">No finalizado</string>

    <!--CUADRO DE DIALOGO OPCIONES-->
    <string name="ElijaOpcionTXT">Elija una opcion</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Actualizar</string>

    <!--CUADRO DE DIALOGO CUENTA VERIFICADA-->
    <string name="CuentaVerificadaTXT">Cuenta Verificada</string>
    <string name="EntendidoVerificado">Entendido</string>

    <!--Actualizar Nota-->
    <string name="Id_nota_A">Id Nota</string>
    <string name="Uid_Usuario_A">Uid del Usuario</string>
    <string name="Correo_Usuario_A">Correo de Usuario</string>
    <string name="Fecha_hora_registro_A">Fecha de Registro</string>
    <string name="Titulo_A">Titulo</string>
    <string name="Descripcion_A">Descripcion</string>
    <string name="Btn_Calendario_A">Calendario</string>
    <string name="Fecha_A">00/00/0000</string>
    <string name="Estado_A">No finalizado</string>
    <string name="Estado_nuevo"> -- </string>

    <!--SPINNER _ ESTADO -->
    <string-array name="Estados_nota">
        <item>"No finalizado"</item>
        <item>"Finalizado"</item>
    </string-array>
    
    <!--DETALLE NOTA-->

    <string name="Id_nota_Detalle">Id Nota</string>
    <string name="Uid_usuario_Detalle">Uid Usuario</string>
    <string name="Correo_usuario_Detalle">Correo Usuario</string>
    <string name="Titulo_Detalle">Titulo</string>
    <string name="Descripcion_Detalle">Descripcion</string>
    <string name="Fecha_Registro_Detalle">Fecha Registro</string>
    <string name="Fecha_Nota_Detalle">Fecha Nota</string>
    <string name="Estado_Detalle">Estado</string>

    <string name="Id_nota_Detalle_TXT">Id de la nota:</string>
    <string name="Uid_usuario_Detalle_TXT">Uid de Usuario:</string>
    <string name="Correo_usuario_Detalle_TXT">Correo de Usuario:</string>
    <string name="Titulo_Detalle_TXT">Titulo:</string>
    <string name="Descripcion_Detalle_TXT">Descripcion:</string>
    <string name="Fecha_Registro_Detalle_TXT">Fecha Registro:</string>
    <string name="Fecha_Nota_Detalle_TXT">Fecha Nota:</string>
    <string name="Estado_Detalle_TXT">Estado de la nota:</string>
    
</resources>