<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <!--ICONO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/icono_item_nota">

            </androidx.appcompat.widget.AppCompatImageView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="7dp">

            <TextView
                android:id="@+id/Id_nota_Item"
                android:text="@string/Id_nota_Item"
                android:visibility="gone"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:id="@+id/Uid_Usuario_Item"
                android:text="@string/Uid_Usuario_Item"
                android:visibility="gone"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:id="@+id/Correo_Usuario_Item"
                android:text="@string/Correo_Usuario_Item"
                android:visibility="gone"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:id="@+id/Fecha_hora_registro_Item"
                android:text="@string/Fecha_hora_registro_Item"
                android:visibility="gone"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:id="@+id/Titulo_Item"
                android:text="@string/Titulo_Item"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:id="@+id/Descripcion_Item"
                android:text="@string/Descripcion_Item"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:id="@+id/Fecha_Item"
                android:text="@string/Fecha_Item"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <!--ESTADO DE LA NOTA-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/Tarea_Finalizada_Item"
                    android:layout_width="10dp"
                    android:visibility="gone"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:background="#00e676">

                </androidx.appcompat.widget.AppCompatImageView>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/Tarea_No_Finalizada_Item"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:visibility="gone"
                    android:background="#d50000">

                </androidx.appcompat.widget.AppCompatImageView>
                <TextView
                    android:id="@+id/Estado_Item"
                    android:text="@string/Estado_Item"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/poppins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>

            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>